--- a/index.html
+++ b/index.html
@@ -24,15 +24,30 @@
 			</div>
 			<div class="row">
 				<div class="col-md-8" id="line-graph">
-					<p>placeholder text</p>
+					<p>graph</p>
 				</div>
 				<div class="col-md-4" id="profit">
-					<p>placeholder text</p>
+					<p>stock symbol</p>
+					<p>current price</p>
+					<p>time range</p>
+					<p>total percentage</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12" id="time-stamps">
-					<p>placeholder text</p>
+					<p>time stamps of trades made</p>
+					<div id="trades">
+						<p>trade</p>
+						<p>trade</p>
+						<p>trade</p>
+						<p>trade</p>
+						<p>trade</p>
+						<p>trade</p>
+						<p>trade</p>
+						<p>trade</p>
+						<p>trade</p>
+						<p>trade</p>
+					</div>
 				</div>
 			</div>
 			<div class="row">
