--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12" id="search-bar">
-					<input type="text" id="search" name="search" placeholder="Enter Stock Symbol" ng-keyup="$event.keyCode == 13 && search()">
+					<input type="text" id="search" ng-model="symbol" placeholder="Enter Stock Symbol" ng-keyup="$event.keyCode == 13 && search()">
 					<ul class="results">
 						<li><span ng-bind="result"></span></li>
 						<li><span>result 2</span></li>
@@ -31,8 +31,8 @@
 					<p>graph</p>
 				</div>
 				<div class="col-md-4" id="profit">
-					<p>stock symbol</p>
-					<p>current price</p>
+					<p ng-bind="stockSymbol"></p>
+					<p ng-bind="currentPrice"></p>
 					<p>time range</p>
 					<p>total percentage</p>
 				</div>
@@ -57,6 +57,7 @@
 			<div class="row">
 				<div class="col-md-12" id="footer">
 					<p>placeholder text</p>
+					<a href="https://iexcloud.io">Data provided by IEX Cloud</a>
 				</div>
 			</div>
 		</div>
