--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     	<!-- scripts-->
     	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
+		<script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+    	<script src="https://cdn.zingchart.com/angular/zingchart-angularjs.js"></script>
     	<script type="text/javascript" src="js/app.js"></script>
 
 	</head>
@@ -29,11 +31,12 @@
 			<div class="row">
 				<div class="col-md-8" id="line-graph">
 					<p>graph</p>
+					<div zingchart id="chart-1" zc-json="myJson" zc-width="100%" zc-height="568px"></div>
 				</div>
 				<div class="col-md-4" id="profit">
 					<p ng-bind="stockSymbol"></p>
 					<p ng-bind="currentPrice"></p>
-					<p>time range</p>
+					<p><span ng-bind="beggining"></span>-<span ng-bind="end"></span></p>
 					<p>total percentage</p>
 				</div>
 			</div>
@@ -41,16 +44,7 @@
 				<div class="col-md-12" id="time-stamps">
 					<p>time stamps of trades made</p>
 					<div id="trades">
-						<p>trade</p>
-						<p>trade</p>
-						<p>trade</p>
-						<p>trade</p>
-						<p>trade</p>
-						<p>trade</p>
-						<p>trade</p>
-						<p>trade</p>
-						<p>trade</p>
-						<p>trade</p>
+						<p ng-repeat="timestamp in timestamps" ng-bind=timestamp></p>
 					</div>
 				</div>
 			</div>
