added date range html and css

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
 				</div>
 			</div>
 			<div class="row">
+				<div class="col-md-12" id="date-range">
+					<ul>
+						<li><span>Today</span></li>
+						<li><span>5 Days</span></li>
+						<li><span>1 Month</span></li>
+						<li><span>Date</span></li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-8" id="line-graph">
 					<p>graph</p>
 					<div zingchart id="chart-1" zc-json="myJson" zc-width="100%" zc-height="568px"></div>
